--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <title>Babbe's Website</title>
     <link rel="preconnect" href="https://fonts.bunny.net">
-    <link href="https://fonts.bunny.net/css?family=open-sans:800" rel="stylesheet" /> 
-    <link rel="stylesheet" href="../css/style.css">
-    
+    <link href="https://fonts.bunny.net/css?family=aboreto:400|open-sans:600,700,800;" rel="stylesheet" /> 
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     
@@ -24,7 +24,7 @@
                         <li>Welding<a href="#"></a></li>
                         <li>Sandblasting<a href="#"></a></li>
                         <li>Wheel Restoration<a href="#"></a></li>
-                        <li>HeadLight Restoration<a href="#"></a></li>
+                        <li>Headlight Restoration<a href="#"></a></li>
                         <li>About<a href="#"></a></li>
                         <li>Contact<a href="#"></a></li>   
                     </ul>
