--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Babbe's Website</title>
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=aboreto:400|open-sans:600,700,800;" rel="stylesheet" /> 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
